# parsli

./: README.md  pyproject.toml
config/: bert-crf.jsonnet  bert.jsonnet  bilstm-cnn-crf-hpo.jsonnet  bilstm-cnn-crf.jsonnet  bilstm-crf.jsonnet  template.libsonnet
data/: test.csv  validation.csv
parsli/dataset_readers/: references.py
parsli/models/: __init__.py  simple_tagger_2.py
parsli/training/metrics/: __init__.py
tests/: test_parsli.py
